refactor: split splash generator, clean code, improve typing

--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "dev": "vite",
     "dev:host": "vite --host",
     "test": "vitest",
+    "test:typecheck": "tsc",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --write \"**/*.{ts,js,mjs,tsx,md,json,html,css}\"",
     "format": "npm run lint:fix && npm run prettier",
-    "generate-splash": "npm run generate-splash:cleanup && node scripts/generateSplashScreens.mjs && prettier --write index.html",
-    "generate-splash:cleanup": "node scripts/generateSplashScreens.mjs --mode=cleanup && prettier --write index.html",
+    "generate-splash": "npm run generate-splash:cleanup && node scripts/splash-screens/generate.mjs && prettier --write index.html",
+    "generate-splash:cleanup": "node scripts/splash-screens/generate.mjs --mode=cleanup && prettier --write index.html",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "preview:host": "vite preview --host",
-    "prepare": "husky"
+    "prepare": "husky",
+    "rm:build": "rimraf dist dev-dist",
+    "rm:node_modules": "rimraf node_modules",
+    "clean-install": "npm run rm:node_modules && npm install"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -66,6 +70,7 @@
     "lint-staged": "^15.5.1",
     "prettier": "^3.5.3",
     "puppeteer": "^24.6.1",
+    "rimraf": "^6.0.1",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.2",
