--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "preview:host": "vite preview --host",
     "prepare": "husky",
     "rm:build": "rimraf dist dev-dist",
+    "rm:cache": "rimraf .cache dev-dist",
     "rm:node_modules": "rimraf node_modules",
-    "clean-install": "npm run rm:node_modules && npm install"
+    "clean-install": "npm run rm:node_modules && npm install && npm run rm:cache"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
