docs: update live link

--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "todoapp",
   "author": {
     "name": "Maciej Twaróg",
-    "url": "https://github.com/maciekt07"
+    "url": "https://github.com/hirotanaka918"
   },
   "private": true,
   "type": "module",
   "homepage": "https://react-cool-todo-app.netlify.app/",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/maciekt07/TodoApp.git"
+    "url": "git+https://github.com/hirotanaka918/TodoApp.git"
   },
   "license": "MIT",
   "scripts": {
